// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiBadge is disabled 1`] = `
<span
  aria-label="aria-label"
  class="ouiBadge ouiBadge-isDisabled ouiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge is rendered with href and rel provided 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <a
      aria-label="aria-label"
      class="ouiBadge__childButton"
      data-test-subj="test subject string"
      href="/#/"
      rel="noopener noreferrer"
    >
      Content
    </a>
  </span>
</span>
`;

exports[`OuiBadge is rendered with href provided 1`] = `
<a
  aria-label="aria-label"
  class="ouiBadge ouiBadge-isClickable ouiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  href="/#/"
  rel="noreferrer"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</a>
`;

exports[`OuiBadge is rendered with iconOnClick and href provided 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <a
      aria-label="aria-label"
      class="ouiBadge__childButton"
      data-test-subj="test subject string"
      href="/#/"
      rel="noreferrer"
    >
      Content
    </a>
  </span>
</span>
`;

exports[`OuiBadge is rendered with iconOnClick and onClick provided 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <button
      aria-label="aria-label"
      class="ouiBadge__childButton"
      data-test-subj="test subject string"
    >
      Content
    </button>
  </span>
</span>
`;

exports[`OuiBadge is rendered with iconOnClick provided 1`] = `
<span
  aria-label="aria-label"
  class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge is rendered with onClick provided 1`] = `
<button
  aria-label="aria-label"
  class="ouiBadge ouiBadge-isClickable ouiBadge--iconLeft testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`OuiBadge props color accent is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#ee789d;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color accepts hex 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#333;color:#fff"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color accepts rgba 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:rgba(255,255,255,1);color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color danger is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#ff7e62;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color default is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color primary is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#79aad9;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color secondary is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#6dccb1;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color success is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#6dccb1;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props color warning is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#f1d86f;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props iconSide left is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
    <span
      class="ouiBadge__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
  </span>
</span>
`;

exports[`OuiBadge props iconSide right is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconRight"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
    <span
      class="ouiBadge__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
  </span>
</span>
`;

exports[`OuiBadge props iconType is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#d3dae6;color:#000"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
    <span
      class="ouiBadge__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
  </span>
</span>
`;

exports[`OuiBadge props style is rendered 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#d3dae6;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with accent 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#ee789d;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with danger 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#ff7e62;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with default 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#d3dae6;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with hollow 1`] = `
<span
  class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft"
  style="border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with primary 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#79aad9;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with secondary 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#6dccb1;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with success 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#6dccb1;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`OuiBadge props style is rendered with warning 1`] = `
<span
  class="ouiBadge ouiBadge--iconLeft"
  style="background-color:#f1d86f;color:#000;border:4px solid tomato"
>
  <span
    class="ouiBadge__content"
  >
    <span
      class="ouiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;
